discussion/kv_engine/126024/126024_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38673: Privilege based visibility for get_scope/collection id

Still needs tweaking and cleaning (some cerr stuff)

Tests to check returned uid...

Change-Id: I4a20c791284a12d66741254da006541f923362e7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-17 18:22:07.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-17 18:58:34.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27593/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27593/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1767/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2: error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
#error "Please include memcached/engine.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/protocol_binary.h:2211:5: warning: single-argument constructors must be marked explicit to avoid unintentional implicit conversions [google-explicit-constructor]
    GetCollectionIDPayload(uint64_t manifestId)
    ^
    explicit 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/protocol_binary.h:2238:5: warning: single-argument constructors must be marked explicit to avoid unintentional implicit conversions [google-explicit-constructor]
    GetScopeIDPayload(uint64_t manifestId) : manifestId(htonll(manifestId)) {
    ^
    explicit 

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1767/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2:
error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1767/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23594/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: use of undeclared identifier "producer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23594/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3197/ : FAILURE

Compile error at [2020-04-17T18:53:58.137Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3197/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11049/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3258/ : FAILURE

Compile error at [2020-04-17T18:54:40.215Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3258/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3181/ : FAILURE

Compile error at [2020-04-17T18:55:19.432Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3181/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2241/ : FAILURE

Compile error at [2020-04-17T18:25:05.812Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: use of undeclared identifier "producer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2241/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/286/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
